Remove fixed ToC on mobile screens

--- a/custom_theme/css/summit.css
+++ b/custom_theme/css/summit.css
@@ -40,3 +40,9 @@ img {
     width: 250px;
   }
 }
+
+@media (max-width: 991px) {
+  .affix {
+    position: relative;
+  }
+}
